[package]
name = "rustgres-schema"
version = "0.1.0"
edition = "2021"
authors = ["Kyle Gagnon <kmgagnon99@gmail.com>"]
description = "A tool for generating Rust code from a Postgres schema"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.11", features = ["cargo"]}
convert_case = "0.6.0"
dotenv = "0.15.0"
postgres = "0.19.5"
quote = "1.0.29"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
syn = "2.0.25"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
uuid = { version = "1.4.0", features = ["serde"] }
